<resources>
    <string name="app_name">MunchBot</string>
    <string name="welcome_to_">Welcome to MunchBot!</string>
    <string name="meet_munchb">Meet MUNCHBOT, the smart device that automatically feeds your pet and tracks their eating habits. Say goodbye to worries about feeding times with this innovative solution.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="munchbot">M u n c h B o t</string>
    <string name="made_by">Made By YASER</string>
    <string name="our_app_helps_you_manage_your_pet_s_health_from_vaccinations_and_medications_to_vet_visits_and_more_ensuring_your_furry_friend_is_always_in_the_best_shape">Our app helps you manage your pet\'s health, from vaccinations and medications to vet visits and more, ensuring your furry friend is always in the best shape.</string>
    <string name="take_care_of_your_pet">Take Care of Your Pet</string>
    <string name="view_pager_description">yaser yjjou</string>
    <string name="pet_care_made_easy">Pet Care Made Easy</string>
    <string name="explore_a_comprehensive_array_of_convenient_services_and_a_caring_community_committed_to_ensuring_the_happiness_and_well_being_of_your_beloved_pet">Explore a comprehensive array of convenient services and a caring community committed to ensuring the happiness and well-being of your beloved pet.</string>
    <string name="get_started">Get Started</string>
    <string name="already_hav">Already have an account? <b><u>Login</u></b></string>
    <string name="doesn_t_hav">Doesn’t have an account? <b><u>Signup</u></b></string>
    <string name="waves">waves</string>
    <string name="login_dog">login_dog</string>
    <string name="speech_munchbot_login">Speech_munchbot_login</string>
    <string name="welcome"><font color="#0F2032">Welcome</font> <font color="#407BFF">Back!</font></string>
    <string name="back">Back!</string>
    <string name="continue_yo">Continue your MunchBot journey with us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_pa">I Forgot Password ?</string>
    <string name="log_in">Log in</string>
    <string name="please_wait">Please wait …</string>
    <string name="survey_questions"><font color="#0F2032">Survey</font> <font color="#407BFF">Questions</font></string>
    <string name="pet_choice"><font color="#0F2032">Pet</font> <font color="#407BFF">Choice</font></string>
    <string name="create_a_ne"> Create a new account to join \nour furry community </string>
    <string name="i_agree_to_">I agree to terms and conditions</string>
    <string name="txtContinue">Continue</string>
    <string name="resend_link">resend link</string>
    <string name="basic">Basic</string>
    <string name="profile">Profile</string>
    <string name="questionare">Questionare</string>
    <string name="_1">1</string>
    <string name="_100">100%</string>
    <string name="_0">0%</string>
    <string name="complete_your_profile_so_we_can_know_you_better">Complete your profile so we can know you better</string>
    <string name="username">Username</string>
    <string name="shortly_describe_yourself">Shortly describe yourself</string>
    <string name="status">Status</string>
    <string name="other"><font color="#0F2032"><b>Other (please spesify) :</b></font></string>
    <string name="catText"><font color="#0F2032"><b>Cat</b></font></string>
    <string name="dogText"><font color="#0F2032"><b>Dog</b></font></string>
    <string name="we_will_ask_you_some_questions_for_finding_you_pets_of_your_choice">We will ask you some questions for finding you pets of your choice</string>
    <string name="congratulations"><font color="#0F2032">Congratulations !!</font></string>
    <string name="you_have_successfully_completed_all_the_steps_click_on_finish_to_create_your_account_and_start_your_journey_with_us">You have successfully completed all the steps. Click on <font color="#0F2032"><b>\'Finish\'</b></font> to create your account and start your journey with us.</string>
    <string name="pet_name">Pet Name</string>
    <string name="helloUser">Hello<font color="#0491E9"><b> %1$s </b></font>, please connect your phone to the <font color="#0491E9"><b>MunchBot</b></font> device via Bluetooth to configure your settings. Once connected, you will be able to proceed with the setup process smoothly.\n</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="home">Home</string>
    <string name="planner">Planner</string>
    <string name="vet">Vet</string>
    <string name="health">Health</string>
    <string name="usernameUser">Username</string>
    <string name="horse"><font color="#0F2032"><b>Horse</b></font></string>
    <string name="phone_label">Phone: %s</string>
    <string name="email_label">Email: %s</string>
    <string name="add_a_vet_and_ensure_your_pet_s_health_stays_in_top_shape">Add a vet and ensure your pet\'s health stays in top shape!</string>
    <string name="Take_a_look_at_how_pet_s_day_was_planned">Take a look at how %1$s\’s day was planned.</string>
    <string name="search">Search . . .</string>
    <string name="Today_s_Daily_Habits">Today’s Daily Habits</string>
    <string name="Today_s_Special_Events">Today’s Special Events</string>
    <string name="MunchBot_1">MunchBot-1</string>
    <string name="FoodTime"><font color="#0491E9"><b>Food</b></font><font color="#0F2032"><b> Time !!</b></font></string>
    <string name="FoodTimepara">Here you can put the Time and the Quantity of meel drops !</string>
    <string name="DeviceName">Device Name</string>
    <string name="save_meel">Save Meel</string>
    <string name="This_is_Pet_s_Diary"><font color="@color/darkFirstColor">This is </font><font color="#407BFF">Pet’s</font><font color="@color/darkFirstColor"> Diary!</font></string>
    <string name="sign_up"><font color="@color/darkFirstColor">Sign</font> <font color="#407BFF">Up</font></string>
    <string name="consultVet"><font color="@color/darkFirstColor">Consult a</font> <font color="#407BFF">Vet!</font></string>
    <string name="enter_a_habit">Enter a habit</string>
    <string name="undo">Undo . . .</string>
    <string name="day">%1$s\n%2$s</string>
    <string name="health_care"><font color="@color/darkFirstColor">Health</font> <font color="#407BFF">Care</font></string>
    <string name="medications">Medications</string>
    <string name="reports">Reports</string>
    <string name="vet_visits">Vet Visits</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="medical_records">Medical Records</string>
    <string name="in_the_health_section_you_can_manage_your_pet_s_health_from_vet_reports_to_medications">In the Health section, you can manage your pet\'s health, from vet reports to medications.</string>
    <string name="pet_age">Pet Age\n%1$s</string>
    <string name="pet_birthday">Pet Birthday\n%1$s </string>
    <string name="pet_details"><font color="@color/darkFirstColor">Pet</font> <font color="#407BFF">Details</font></string>
    <string name="owner_details"><font color="@color/darkFirstColor">Owner</font> <font color="#407BFF">Details</font></string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="name_of_user">%1$s</string>
    <string name="email_user">%1$s</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>