<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="756px"
        android:layout_height="272px"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/vectors_bar" />

    <ImageView
        android:id="@+id/jumpingImage"
        android:layout_width="700px"
        android:layout_height="650px"
        android:layout_gravity="center"
        android:src="@drawable/feed"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="750px"
        android:layout_height="100px"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|center_vertical|center"
        android:lineHeight="72sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        android:textColor="#0491E9"
        android:textSize="48px" />

    <TextView
        android:id="@+id/meet_munchb"
        android:layout_width="630px"
        android:layout_height="200px"
        android:layout_marginLeft="50px"
        android:layout_marginTop="20px"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|center_vertical|center"
        android:lineSpacingExtra="12px"
        android:text="@string/meet_munchb"
        android:textAppearance="@style/meet_munchb"
        android:textColor="#CC6C6868"
        android:textSize="32px"
        android:translationY="-6.25px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/circle_clean"
            android:layout_width="27px"
            android:layout_height="27px"
            android:layout_marginLeft="328px"
            android:layout_marginTop="80px"
            android:src="@drawable/circle_clean" />

        <ImageView
            android:id="@+id/circle_b1"
            android:layout_width="27px"
            android:layout_height="27px"
            android:layout_marginTop="80px"
            android:src="@drawable/circle_blur" />

        <ImageView
            android:id="@+id/circle_b2"
            android:layout_width="27px"
            android:layout_height="27px"
            android:layout_marginTop="80px"
            android:src="@drawable/circle_blur" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skip"
            android:layout_width="153px"
            android:layout_height="56px"
            android:layout_marginStart="15px"
            android:layout_marginBottom="100px"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:lineHeight="56px"
            android:text="@string/skip"
            android:textAppearance="@style/skip"
            android:textColor="#990491E9"
            android:textSize="48px"
            tools:ignore="PxUsage" />

        <TextView
            android:id="@+id/next"
            android:layout_width="153px"
            android:layout_height="56px"
            android:layout_marginStart="380px"
            android:layout_marginBottom="100px"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:lineHeight="56px"
            android:text="@string/next"
            android:textAppearance="@style/next"
            android:textColor="#990491E9"
            android:textSize="48px"
            tools:ignore="PxUsage" />
    </LinearLayout>
</LinearLayout>